--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
   "name": "fake-sms",
-  "type": "module",
-  "module": "src/index.ts",
+  "author": "erguotou525@gmail.com",
   "scripts": {
     "format": "biome check --apply .",
-    "migrate": "bun run src/migrate.ts",
-    "oxlint": "oxlint .",
-    "schema": "bunx drizzle-kit generate:sqlite --schema ./src/schema.ts",
-    "seed": "bun run src/seed.ts",
-    "start": "bun run src/index.ts"
+    "oxlint": "oxlint ."
   },
-  "dependencies": {
-    "@elysiajs/bearer": "^0.8.0",
-    "@elysiajs/jwt": "^0.8.0",
-    "@elysiajs/static": "^0.8.1",
-    "@elysiajs/swagger": "^0.8.5",
-    "@lukeed/uuid": "^2.0.1",
-    "drizzle-orm": "^0.29.3",
-    "elysia": "^0.8.15",
-    "oxlint": "^0.2.6"
-  },
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.20.13"
+    "oxlint": "^0.2.6"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
