--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "module": "src/index.ts",
   "scripts": {
-    "migrate": "bun run src/migrate.ts",
+    "migrate": "bun run src/db/migrate.ts",
     "schema": "bunx drizzle-kit generate:sqlite --schema ./src/db/schema.ts",
     "seed": "bun run src/db/seed.ts",
     "start": "bun run src/index.ts"
