--- a/packages/chrome-ext/package.json
+++ b/packages/chrome-ext/package.json
@@ -8,7 +8,7 @@
     "dev": "plasmo dev",
     "build": "plasmo build",
     "package": "plasmo package",
-    "css": "unocss ./"
+    "css": "unocss ."
   },
   "dependencies": {
     "plasmo": "0.84.2",
@@ -21,6 +21,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@unocss/cli": "^0.58.5",
     "prettier": "3.2.4",
     "typescript": "5.3.3"
   },
