--- a/packages/chrome-ext/package.json
+++ b/packages/chrome-ext/package.json
@@ -11,6 +11,7 @@
     "css": "unocss ."
   },
   "dependencies": {
+    "@plasmohq/storage": "^1.9.2",
     "plasmo": "0.84.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
