--- a/biome.json
+++ b/biome.json
@@ -2,6 +2,6 @@
   "$schema": "https://biomejs.dev/schemas/1.5.2/schema.json",
   "extends": ["./node_modules/@doremijs/biome-config/biome.json"],
   "files": {
-    "ignore": ["src/api/models.ts", "src/api/client.ts"]
+    "ignore": [".vscode/**/*.*", "packages/chrome-ext/.plasmo", "packages/chrome-ext/build"]
   }
 }
