--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "fake-sms",
   "author": "erguotou525@gmail.com",
-  "scripts": {
-    "format": "biome check --apply .",
-    "oxlint": "oxlint ."
-  },
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
+    "@doremijs/biome-config": "^0.1.3",
     "@types/bun": "latest",
     "@unocss/cli": "^0.58.5",
     "daisyui": "^4.6.2",
@@ -25,7 +18,12 @@
     "node": ">=10.0.0",
     "bun": ">1.0.0"
   },
-  "dependencies": {
-    "@elysiajs/eden": "^0.8.1"
-  }
+  "private": true,
+  "scripts": {
+    "format": "biome check --apply .",
+    "oxlint": "oxlint ."
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
