--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
     "@biomejs/biome": "^1.5.3",
     "@doremijs/biome-config": "^0.1.3",
     "@types/bun": "latest",
-    "@unocss/cli": "^0.58.5",
-    "daisyui": "^4.6.2",
-    "oxlint": "^0.2.6",
-    "unocss": "^0.58.5",
-    "unocss-preset-daisy": "^7.0.0"
+    "oxlint": "^0.2.6"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
