fix: add ci file as run condition file

--- a/.github/workflows/build-chrome-ext.yml
+++ b/.github/workflows/build-chrome-ext.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
     paths:
       - packages/chrome-ext/**
+      - .github/workflows/build-chrome-ext.yml
 
 defaults:
   run:
