--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - packages/server/**
       - Dockerfile
+      - .github/workflows/build-server.yml
 
 jobs:
   push_to_registry:
