--- a/.github/workflows/build-chrome-ext.yml
+++ b/.github/workflows/build-chrome-ext.yml
@@ -42,7 +42,7 @@ jobs:
           r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
           r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
           r2-bucket: ${{ secrets.R2_BUCKET }}
-          source-dir: build
+          source-dir: packages/chrome-ext/build
           destination-dir: ./
       # - name: Browser Platform Publish
       #   uses: PlasmoHQ/bpp@v3
