--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -27,11 +27,14 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: erguotou/fake-sms
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
