ci: fix server build action

--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -5,8 +5,11 @@ on:
     branches: [ "main" ]
     paths:
       - packages/server/**
-      - Dockerfile
       - .github/workflows/build-server.yml
+
+defaults:
+  run:
+    working-directory: ./packages/server
 
 jobs:
   push_to_registry:
