--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./packages/server
           platforms: linux/amd64,linux/arm64
-          file: ./packages/server/Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
