ci: test fix build context

--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -16,8 +16,6 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -39,7 +37,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./packages/server
+          context: "{{defaultContext}}:packages/server"
           platforms: linux/amd64,linux/arm64
           file: Dockerfile
           push: true
